# USDCOP-RL-Models

./: .dockerignore  .dvcignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  =2.0.0  AIRFLOW-FIX-GUIDE.md  AIRFLOW_FAST_SETUP.md  AIRFLOW_FIXES_SUMMARY.md  ANALISIS_RISK_MONITOR_HARDCODED.md  ANALISIS_VALORES_SCREENSHOT.md  ANALYTICS_API_IMPLEMENTATION_COMPLETE.md  API_DOCUMENTATION.md  API_STATUS_REPORT.md  APY_ANALYSIS_INDEX.txt  APY_ANALYSIS_README.md  APY_MATHEMATICAL_FOUNDATIONS.md  APY_PROJECTIONS_ANALYSIS.md  APY_QUICK_REFERENCE.txt  ARCHITECTURE_CONSOLIDATED.md  ARQUITECTURA_100_DINAMICA.md  AUTOMATED_REALTIME_SYSTEM.md  AZURE_VM_ACCESS_VERIFIED.md  CADENA_COMPLETA_CONEXIONES.md  CLAUDE.md  COMPLETE_IMPLEMENTATION_REPORT.md  COMPREHENSIVE_SYSTEM_ANALYSIS_REPORT.md  CONFIRMACION_DASHBOARD_HOME_DINAMICO.txt  Ctempcandles.json  DASHBOARD_FUNCTIONALITY_TEST_REPORT.md  DATA_SOURCES_ARCHITECTURE.md  DATETIME_FIXES_IMPLEMENTATION_COMPLETE.md  DATETIME_FIXES_SUMMARY.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.production  ENDPOINT_COVERAGE_MATRIX.md  (+114 more)
.claude/: README.md  settings.local.json
.dvc/: .gitignore  config
.github/: dependabot.yml
airflow/: Dockerfile.minimal  Dockerfile.prod  __init__.py  entrypoint.minimal.sh  entrypoint.sh  requirements.minimal.txt  requirements.txt  setup_minio_connection.py  test_dag_imports.py
app/: deps.py
archive/: README.md
config/: chaos-engineering-config.yml  contract-test-config.yml  current_config.yaml  database.yaml  dataset_config_v20.py  date_ranges.yaml  deployment_safeguards.yaml  economic_calendar.yaml  experiment_ssot.yaml  feature_config.json  feature_flags.json  feature_registry.yaml  forecasting_ssot.yaml  hyperparameter_decisions.json  integration-test-config.yml  l0_macro_sources.yaml  loki-config.yml  macro_variables_ssot.yaml  minio-buckets.yaml  mlops.yaml  mt5_config.yaml  norm_stats.json  norm_stats_v1_1_0.json  pipeline_health_config.yaml  pipeline_ssot.yaml  ppo_config_v20.py  prometheus.yml  promtail-config.yml  seed_config.yaml  storage_config.yaml  strategy_registry.yaml  twelve_data_config.yaml  usdcop_config.yaml
dashboard/: README.md  audit_compliance_dashboard.py  backtest_api_server.py  backtest_engine.py  commercial_calculations.py  dashboard-trading-profesional.html  investment_simulator.html  launch_dashboard.bat  launch_premium_dashboard.bat  main_server.py  premium_dashboard.html  premium_data_server.py  professional_server.py  real_trading_server.py  realtime_backtest_dashboard.html  requirements.txt  verify_premium_data.py
database/: GEMINI_TASKS.md  README.md  STRUCTURE.txt  VERIFICATION_CHECKLIST.txt  alembic.ini
debug/: dashboard_analyzer.py
diagnostica/: 01_queries_diagnostico.sql  03_P0_FIXES.sql  06_PLAN_MAESTRO_10_EXPERTOS.md  08_CHECKLIST_EJECUTABLE_COMPLETO.md  09_Documento Maestro Completo.md
docker/: Dockerfile.airflow-ml  Dockerfile.bucket-init  Dockerfile.data-seeder  Dockerfile.feast  Dockerfile.trading-api  init-db.sh
docs/: AB_TESTING_END_TO_END_GUIDE.md  AB_TESTING_GUIDE.md  AIRFLOW_STATUS.md  ANALISIS_CRUZADO_PIPELINES_V1.md  API_REFERENCE.md  API_REFERENCE_V2.md  API_VERSIONING.md  ARCHITECTURE.md  ARQUITECTURA_INTEGRAL_V3.md  AUDIT_1400_QUESTIONS_MASTER.md  AUDIT_300_QUESTIONS_FINAL.md  AUDIT_300_QUESTIONS_RESULTS.md  AUDIT_CUSPIDE_600_QUESTIONS.md  AUDIT_EXPERIMENTATION_AB_TESTING_20260117.md  AUDIT_EXPERIMENTATION_REMEDIATION_20260117.md  AUDIT_PIPELINE_L0_L4_2026-02-01.md  AUDIT_REMEDIATION_COMPLETE_20260117.md  AUDIT_REPORT_20260117.md  AUDIT_RESPONSES_V2.md  AUDIT_RESPONSE_500_QUESTIONS.md  BACKUP_RESTORE_PLAN_v2.md  CHANGELOG_v14_v15.md  CLAUDE_TASKS.md  CLEANUP_RECOMMENDATIONS.md  CODE_AUDIT_REPORT_20260117.md  CODE_CONSOLIDATION_REPORT_20260117.md  CONSOLIDATION_SUMMARY.md  CONTRACT_REMEDIATION_PLAN_100.md  COURSE_PROJECT.md  DASHBOARD_VIEWS.md  DATABASE_ER_DIAGRAM.md  DATABASE_SCHEMA_V19.md  DATASET_CONSTRUCTION.md  DATASET_QUALITY_ISSUES.md  DATASET_REPRODUCIBILITY_REMEDIATION_PLAN.md  DATA_FLOW_END_TO_END.md  DATA_VERSIONING.md  DEBUG_VIDEO_L0_L4_EXECUTION.md  DIAGRAMA_ARQUITECTURA_PIPELINES.md  ELITE_TECHNICAL_DOCUMENTATION_L0_L5.md  (+97 more)
examples/: bucket_management_examples.py
feature_repo/: __init__.py  feature_store.yaml  features.py
init-scripts/: 00-init-extensions.sql  01-essential-usdcop-init.sql  01-init-databases.sql  01-init-postgres.sql  01-timescale-setup.sql  02-macro-indicators-schema.sql  02-trading-schema.sql  03-inference-features-views-v2.sql  04-data-seeding.py  04-seed-from-minio.py  05-model-registry.sql  06-create-data-marts.sql  06-experiment-registry.sql  07-create-multi-strategy-tables.sql  09-create-alpha-arena-tables.sql  10-multi-model-schema.sql  12-trades-metadata.sql  15-forecasting-schema.sql  20-signalbridge-schema.sql  21-signalbridge-users-schema.sql  25-macro-4table-architecture.sql  26-restore-features.sh
mlops/: data_contract_validator.py  experiment_tracker.py
nginx/: canary.conf  nginx.conf
notebooks/: train_v20_production_parity.py
outputs/: backfill_checkpoint.json
pgadmin/: pgpass  servers.json
prometheus/: alert_rules.yml  prometheus.yml
results/: 2025_loss_analysis.json  2025_loss_analysis.txt  TRAINING_LINEAGE.md  backtest_2025_10k_4strat.json  h5_ensemble_comparison.json  h5_linear_walkforward.json  h5_sharpe_decomposition.json  multi_horizon_comparison.json  oos_2025_pure_validation.json  pipeline_20260202_005216.json  pipeline_20260202_005913.json  pipeline_20260202_014657.json  pipeline_20260202_014822.json  pipeline_20260202_033203.json  pipeline_20260202_093509.json  pipeline_20260202_112721.json  pipeline_20260202_121755.json  pipeline_20260202_143321.json  pipeline_20260202_151516.json  pipeline_20260202_174759.json  pipeline_20260202_204312.json  pipeline_20260202_212135.json  pipeline_20260202_222453.json  pipeline_20260202_222816.json  pipeline_20260202_232923.json  pipeline_20260203_101849.json  run1_output.txt  smart_executor_backtest.json  vol_target_backtest_20260215_033533.json  vol_target_backtest_9models.json
(+4026 files in other folders)
