# =============================================================================
# USD/COP Trading System - Project Configuration
# =============================================================================
# PEP 518 compliant project configuration with build system, dependencies,
# and tool configurations for mypy, ruff, black, isort, and pytest.
#
# Author: Trading Team
# Date: 2025-01-16
# =============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "usdcop-rl-models"
version = "1.0.0"
description = "USD/COP Reinforcement Learning Trading System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Trading Team", email = "trading@example.com"}
]
keywords = ["trading", "reinforcement-learning", "forex", "usdcop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "stable-baselines3>=2.0.0",
    "gymnasium>=0.29.0",
    "onnxruntime>=1.16.0",
]
api = [
    "fastapi>=0.109.0",
    "uvicorn>=0.25.0",
    "httpx>=0.26.0",
]
database = [
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.3.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
]
all = [
    "usdcop-rl-models[ml,api,database,dev]",
]

[project.urls]
Homepage = "https://github.com/your-org/usdcop-rl-models"
Documentation = "https://github.com/your-org/usdcop-rl-models#readme"
Repository = "https://github.com/your-org/usdcop-rl-models.git"
Issues = "https://github.com/your-org/usdcop-rl-models/issues"


# =============================================================================
# MyPy Configuration - Static Type Checking
# =============================================================================

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Strict mode components
strict_equality = true
disallow_untyped_calls = false  # Too strict for third-party libs
disallow_untyped_decorators = false
disallow_any_generics = false

# Paths
files = ["src", "services", "tests"]
exclude = [
    "build",
    "dist",
    "__pycache__",
    ".venv",
    "venv",
    "notebooks",
    "scripts",
]

# Per-module overrides for third-party libraries
[[tool.mypy.overrides]]
module = [
    "stable_baselines3.*",
    "gymnasium.*",
    "onnxruntime.*",
    "minio.*",
    "redis.*",
    "asyncpg.*",
    "psycopg2.*",
    "ta.*",
    "talib.*",
    "mlflow.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false


# =============================================================================
# Ruff Configuration - Fast Python Linter
# =============================================================================

[tool.ruff]
target-version = "py311"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "ARG001", # unused function argument (common in protocols)
    "ARG002", # unused method argument
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101"]
"__init__.py" = ["F401"]


# =============================================================================
# Black Configuration - Code Formatter
# =============================================================================

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.nox
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | node_modules
)/
'''


# =============================================================================
# isort Configuration - Import Sorting
# =============================================================================

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["src", "services", "tests"]
known_third_party = [
    "numpy",
    "pandas",
    "torch",
    "stable_baselines3",
    "gymnasium",
    "onnxruntime",
    "fastapi",
    "pydantic",
]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]


# =============================================================================
# Pytest Configuration - Testing
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "load: Load tests",
    "slow: Slow running tests",
    "feature_parity: Feature parity tests",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]


# =============================================================================
# Coverage Configuration
# =============================================================================

[tool.coverage.run]
source = ["src", "services"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@abstractmethod",
]
show_missing = true
precision = 2
fail_under = 70


# =============================================================================
# Bandit Configuration - Security Linter
# =============================================================================

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101"]  # assert_used (used in tests)


# =============================================================================
# Setuptools Configuration
# =============================================================================

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "services*"]
exclude = ["tests*", "notebooks*", "scripts*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]
